tests/typechecking/valid/simple_let2.ml
let x = 41 + 1 in print_int x
