tests/typechecking/invalid/bad_add_bool_int.ml
let rec x = false + 10 in
print_int x
